--- a/minigrep/Cargo.toml
+++ b/minigrep/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "minigrep"
+name = "brians-minigrep"
 version = "0.1.0"
 edition = "2021"
+description = "A minigrep example from rust book"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
