--- a/minigrep/Cargo.toml
+++ b/minigrep/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "brians-minigrep"
+name = "brians_minigrep"
 version = "0.1.0"
 edition = "2021"
 description = "A minigrep example from rust book"
